Fix scrollbar shifting everything a bit

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@
     width: 100%;
   }
 }
+
+html {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
